Fixed spacing on choices. added names and scores to the game. applied event listeners to all buttons and created a function to clean up the code

--- a/RPS-V2/style.css
+++ b/RPS-V2/style.css
@@ -33,13 +33,15 @@ body{
     width: 100%;
     height: 100%;
     background-color: cornsilk;
+    text-align: center;
 }
 
 .choices{
     position: fixed;
-    top: 500px;
-    /* left: 300px; */
+    top: 475px;
+    left: 560px;
     list-style: none;
+    text-align: center;
 }
 
 .choice{
@@ -47,4 +49,29 @@ body{
     display: inline;
     padding: 5px;
     width: 30px;
+}
+.scoreboard{
+    position:fixed;
+    top: 400px;
+    left: 550px;
+    list-style: none;
+    text-align: center;
+}
+
+.score{
+    display: inline;
+    padding: 50px;
+}
+
+.participants{
+    position:fixed;
+    top: 425px;
+    left: 550px;
+    list-style: none;
+    text-align: center
+}
+
+.nameplate{
+    display: inline;
+    padding: 40px;
 }
